feat: PR-level CI + auto-release installers on every merge to main (#41) (#42)
New ci.yml gates every PR with the full reactor build, tests, and the
installer-module guard. build-installers.yml now also triggers on pushes to
main: a version job bumps the patch of the latest GitHub release (docs-only
merges skip), both installers are built with that version baked in, and the
release is published with the stable asset names the in-app updater downloads.
Manual v* tags still release verbatim for minor/major bumps. The jlink/jpackage
module list is single-sourced in scripts/installer-modules.txt, read by the
workflows, build-installers.ps1, and the new shared guard script
scripts/check-installer-modules.ps1.

Co-authored-by: Patrick Røbel <pr@zrm.dk>
Co-authored-by: Claude Fable 5 <noreply@anthropic.com>